--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                         </div>
                         <div class="card-body">
                             <div class="text-center">
-                                <a class="font-weight-bold h5" target="_blank" href="https://sdunej.id">SDUNEJ</a>
+                                <a class="font-weight-bold h5" target="_blank" href="https://sd.unej.ac.id">SDUNEJ</a>
                             </div>
                             <p style="font-size: small; text-align: justify;" class="mb-0 mt-3">Website sistem informasi edukasi yang dicanangkan oleh LP2M UNEJ untuk mahasiswa KKN Back to Village.</p>
                         </div>
