--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     <div class="card shadow h-100">
                         <div class="card-img-top">
                             <a class="font-weight-bold h5" target="_blank" href="https://blackorangecctv.com">
-                                <img class="mw-100" src="/assets/img/blackorangecctv.png" alt="Black Orange CCTV">
+                                <img class="mw-100" src="assets/img/blackorangecctv.png" alt="Black Orange CCTV">
                             </a>
                         </div>
                         <div class="card-body">
@@ -134,7 +134,7 @@
                     <div class="card shadow h-100">
                         <div class="card-img-top">
                             <a class="font-weight-bold h5" target="_blank" href="https://arjasa.desa.id">
-                                <img class="mw-100" src="/assets/img/arjasa.png" alt="Desa Arjasa">
+                                <img class="mw-100" src="assets/img/arjasa.png" alt="Desa Arjasa">
                             </a>
                         </div>
                         <div class="card-body">
@@ -149,7 +149,7 @@
                     <div class="card shadow h-100">
                         <div class="card-img-top">
                             <a class="font-weight-bold h5" target="_blank" href="https://pgn-indonesia.com">
-                                <img class="mw-100" src="/assets/img/pgn.png" alt="PGN-INDONESIA">
+                                <img class="mw-100" src="assets/img/pgn.png" alt="PGN-INDONESIA">
                             </a>
                         </div>
                         <div class="card-body">
@@ -164,7 +164,7 @@
                     <div class="card shadow h-100">
                         <div class="card-img-top">
                             <a class="font-weight-bold h5" target="_blank" href="https://bwijuaratrip.pesan-web.com">
-                                <img class="mw-100" src="/assets/img/bwijuaratrip.png" alt="BanyuwangiJuaraTrip">
+                                <img class="mw-100" src="assets/img/bwijuaratrip.png" alt="BanyuwangiJuaraTrip">
                             </a>
                         </div>
                         <div class="card-body">
@@ -179,7 +179,7 @@
                     <div class="card shadow h-100">
                         <div class="card-img-top">
                             <a class="font-weight-bold h5" target="_blank" href="https://sd.unej.ac.id">
-                                <img class="mw-100" src="/assets/img/sdunej.png" alt="SDUNEJ">
+                                <img class="mw-100" src="assets/img/sdunej.png" alt="SDUNEJ">
                             </a>
                         </div>
                         <div class="card-body">
@@ -194,7 +194,7 @@
                     <div class="card shadow h-100">
                         <div class="card-img-top">
                             <a class="font-weight-bold h5" target="_blank" href="http://etalase.ilkom.unej.ac.id">
-                                <img class="mw-100" src="/assets/img/etalase.png" alt="UKMK ETALASE">
+                                <img class="mw-100" src="assets/img/etalase.png" alt="UKMK ETALASE">
                             </a>
                         </div>
                         <div class="card-body">
@@ -209,7 +209,7 @@
                     <div class="card shadow h-100">
                         <div class="card-img-top">
                             <a class="font-weight-bold h5" target="_blank" href="https://absensi.pesan-web.com">
-                                <img class="mw-100" src="/assets/img/absensi.png" alt="ABSENSI">
+                                <img class="mw-100" src="assets/img/absensi.png" alt="ABSENSI">
                             </a>
                         </div>
                         <div class="card-body">
@@ -224,7 +224,7 @@
                     <div class="card shadow h-100">
                         <div class="card-img-top">
                             <a class="font-weight-bold h5">
-                                <img class="mw-100" src="/assets/img/bosgerobak.png" alt="bosgerobak">
+                                <img class="mw-100" src="assets/img/bosgerobak.png" alt="bosgerobak">
                             </a>
                         </div>
                         <div class="card-body">
@@ -239,7 +239,7 @@
                     <div class="card shadow h-100">
                         <div class="card-img-top">
                             <a class="font-weight-bold h5" target="_blank" href="https://spot.pesan-web.com">
-                                <img class="mw-100" src="/assets/img/spot.png" alt="spot">
+                                <img class="mw-100" src="assets/img/spot.png" alt="spot">
                             </a>
                         </div>
                         <div class="card-body">
@@ -254,7 +254,7 @@
                     <div class="card shadow h-100">
                         <div class="card-img-top">
                             <a class="font-weight-bold h5" target="_blank" href="https://primapers.com">
-                                <img class="mw-100" src="/assets/img/primapers.png" alt="primapers">
+                                <img class="mw-100" src="assets/img/primapers.png" alt="primapers">
                             </a>
                         </div>
                         <div class="card-body">
@@ -268,7 +268,7 @@
                 <div class="col-lg-4 col-md-6 mb-5">
                     <div class="card shadow h-100">
                         <div class="card-img-top">
-                            <img class="mw-100" src="/assets/img/xylodecoration.png" alt="xylodecoration">
+                            <img class="mw-100" src="assets/img/xylodecoration.png" alt="xylodecoration">
                         </div>
                         <div class="card-body">
                             <div class="text-center">
